--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "name": "nodejs-test",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "start": "node --experimental-specifier-resolution=node src/server.js",
     "lint": "eslint \"src/**/*.js\"",
     "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
+    "@types/better-sqlite3": "^7.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/debug": "^4.1.7",
+    "@types/express": "^4.17.13",
+    "@types/http-errors": "^1.8.1",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^17.0.5",
+    "@types/prettier": "^2.4.2",
+    "@types/uuid": "^8.3.3",
     "better-sqlite3": "^7.4.5",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -18,15 +30,18 @@
     "http": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "prettier": "^2.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
