--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "better-sqlite3": "^7.4.5",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "esm": "^3.2.25",
     "express": "~4.16.1",
     "fs": "0.0.1-security",
