--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/uuid": "^8.3.3",
     "better-sqlite3": "^7.4.5",
     "cookie-parser": "~1.4.4",
+    "cuid": "^2.1.8",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
