--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "type": "module",
-  "name": "nodejs-test",
+  "type": "commonjs",
+  "name": "nodejs-test-inseob-jeon",
   "version": "0.0.0",
+  "main": "./dist/server.js",
   "private": true,
   "engines": {
     "node": ">=14.0.0"
   },
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node src/server.js",
-    "lint": "eslint \"src/**/*.js\"",
-    "format": "prettier --write \"src/**/*.js\""
+    "build": "npx tsc",
+    "start": "npm run build && nodemon ./dist/server.js",
+    "lint": "eslint \"src/**/*.ts\"",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "dependencies": {
     "@types/better-sqlite3": "^7.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/debug": "^4.1.7",
-    "@types/express": "^4.17.13",
     "@types/http-errors": "^1.8.1",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/node": "^17.0.5",
+    "@types/nodemon": "^1.19.1",
     "@types/prettier": "^2.4.2",
     "@types/uuid": "^8.3.3",
     "better-sqlite3": "^7.4.5",
@@ -35,6 +36,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^7.32.0",
@@ -43,7 +46,9 @@
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
+    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
