feature: finished configuring the database system with typeorm + @ - configure testing system with jest and implement test codes of service classes - abstract repository as like other classes(service, controller, copmonent)   - implement mock repository for testing with jest

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,12 @@
     "target": "es2016",
     "module": "commonjs",
     "outDir": "./dist",
+    "types": ["node", "jest"],
     "strict": true,
     "esModuleInterop": true,
     "inlineSourceMap": true,
     "noImplicitAny": false,
-
+    "strictPropertyInitialization": false,
+    "emitDecoratorMetadata": true
   }
 }
