--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/nodemon": "^1.19.1",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/prettier": "^2.4.2",
     "@types/uuid": "^8.3.3",
     "better-sqlite3": "^7.4.6",
@@ -35,6 +37,9 @@
     "http": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
   },
